# worldkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  SUPPORT.md  pyproject.toml  world-driven.md
.devcontainer/: devcontainer.json
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh  generate-release-notes.sh  get-next-version.sh
docs/: README.md  docfx.json  index.md  installation.md  language-support.md  local-development.md  quickstart.md
memory/: foundation.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
src/worldbuild_cli/: __init__.py
templates/: agent-file-template.md  chapters-template.md  checklist-template.md  outline-template.md  vscode-settings.json  world-template.md
templates/commands/: analyze.md  bible.md  chapters.md  character.md  checklist.md  expand.md  foundation.md  outline.md  revise.md  sensory.md  voice.md  worldbuild.md  write.md
