[project]
name = "worldbuild-cli"
version = "1.0.0"
description = "Worldbuild CLI, part of Worldbuilding Kit. A tool to bootstrap your projects for World-Driven Fiction Writing."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
worldbuild = "worldbuild_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldbuild_cli"]

